--- a/review/pr-176/_modules/merlin/systems/dag/ensemble.html
+++ b/review/pr-176/_modules/merlin/systems/dag/ensemble.html
@@ -97,7 +97,7 @@
 <span class="kn">from</span> <span class="nn">google.protobuf</span> <span class="kn">import</span> <span class="n">text_format</span>  <span class="c1"># noqa</span>
 
 <span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">Graph</span>  <span class="c1"># noqa</span>
-<span class="kn">from</span> <span class="nn">merlin.systems.dag.ops.operator</span> <span class="kn">import</span> <span class="n">_add_model_param</span>  <span class="c1"># noqa</span>
+<span class="kn">from</span> <span class="nn">merlin.systems.dag.ops.operator</span> <span class="kn">import</span> <span class="n">add_model_param</span>  <span class="c1"># noqa</span>
 
 
 <div class="viewcode-block" id="Ensemble"><a class="viewcode-back" href="../../../../generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble">[docs]</a><span class="k">class</span> <span class="nc">Ensemble</span><span class="p">:</span>
@@ -146,10 +146,20 @@
         <span class="p">)</span>
 
         <span class="k">for</span> <span class="n">_</span><span class="p">,</span> <span class="n">col_schema</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">graph</span><span class="o">.</span><span class="n">input_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-            <span class="n">_add_model_param</span><span class="p">(</span><span class="n">ensemble_config</span><span class="o">.</span><span class="n">input</span><span class="p">,</span> <span class="n">model_config</span><span class="o">.</span><span class="n">ModelInput</span><span class="p">,</span> <span class="n">col_schema</span><span class="p">)</span>
+            <span class="n">add_model_param</span><span class="p">(</span>
+                <span class="n">ensemble_config</span><span class="o">.</span><span class="n">input</span><span class="p">,</span>
+                <span class="n">model_config</span><span class="o">.</span><span class="n">ModelInput</span><span class="p">,</span>
+                <span class="n">col_schema</span><span class="p">,</span>
+                <span class="n">col_schema</span><span class="o">.</span><span class="n">properties</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;shape&quot;</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span> <span class="ow">or</span> <span class="bp">self</span><span class="o">.</span><span class="n">compute_dims</span><span class="p">(</span><span class="n">col_schema</span><span class="p">),</span>
+            <span class="p">)</span>
 
         <span class="k">for</span> <span class="n">_</span><span class="p">,</span> <span class="n">col_schema</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">graph</span><span class="o">.</span><span class="n">output_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-            <span class="n">_add_model_param</span><span class="p">(</span><span class="n">ensemble_config</span><span class="o">.</span><span class="n">output</span><span class="p">,</span> <span class="n">model_config</span><span class="o">.</span><span class="n">ModelOutput</span><span class="p">,</span> <span class="n">col_schema</span><span class="p">)</span>
+            <span class="n">add_model_param</span><span class="p">(</span>
+                <span class="n">ensemble_config</span><span class="o">.</span><span class="n">output</span><span class="p">,</span>
+                <span class="n">model_config</span><span class="o">.</span><span class="n">ModelOutput</span><span class="p">,</span>
+                <span class="n">col_schema</span><span class="p">,</span>
+                <span class="n">col_schema</span><span class="o">.</span><span class="n">properties</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;shape&quot;</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span> <span class="ow">or</span> <span class="bp">self</span><span class="o">.</span><span class="n">compute_dims</span><span class="p">(</span><span class="n">col_schema</span><span class="p">),</span>
+            <span class="p">)</span>
 
         <span class="c1"># Build node id lookup table</span>
         <span class="n">postorder_nodes</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">postorder_iter_nodes</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">graph</span><span class="o">.</span><span class="n">output_node</span><span class="p">))</span>
@@ -222,7 +232,19 @@
         <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">config_path</span><span class="p">,</span> <span class="s2">&quot;w&quot;</span><span class="p">,</span> <span class="n">encoding</span><span class="o">=</span><span class="s2">&quot;utf-8&quot;</span><span class="p">)</span> <span class="k">as</span> <span class="n">o</span><span class="p">:</span>
             <span class="n">text_format</span><span class="o">.</span><span class="n">PrintMessage</span><span class="p">(</span><span class="n">ensemble_config</span><span class="p">,</span> <span class="n">o</span><span class="p">)</span>
 
-        <span class="k">return</span> <span class="p">(</span><span class="n">ensemble_config</span><span class="p">,</span> <span class="n">node_configs</span><span class="p">)</span></div></div>
+        <span class="k">return</span> <span class="p">(</span><span class="n">ensemble_config</span><span class="p">,</span> <span class="n">node_configs</span><span class="p">)</span></div>
+
+<div class="viewcode-block" id="Ensemble.compute_dims"><a class="viewcode-back" href="../../../../generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble.compute_dims">[docs]</a>    <span class="k">def</span> <span class="nf">compute_dims</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">col_schema</span><span class="p">):</span>
+        <span class="n">dims</span> <span class="o">=</span> <span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">]</span>
+
+        <span class="k">if</span> <span class="n">col_schema</span><span class="o">.</span><span class="n">is_list</span><span class="p">:</span>
+            <span class="n">value_count</span> <span class="o">=</span> <span class="n">col_schema</span><span class="o">.</span><span class="n">properties</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;value_count&quot;</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>
+            <span class="k">if</span> <span class="n">value_count</span> <span class="ow">and</span> <span class="n">value_count</span><span class="p">[</span><span class="s2">&quot;max&quot;</span><span class="p">]</span> <span class="o">&gt;</span> <span class="mi">0</span> <span class="ow">and</span> <span class="n">value_count</span><span class="p">[</span><span class="s2">&quot;min&quot;</span><span class="p">]</span> <span class="o">==</span> <span class="n">value_count</span><span class="p">[</span><span class="s2">&quot;max&quot;</span><span class="p">]:</span>
+                <span class="n">dims</span> <span class="o">=</span> <span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="n">value_count</span><span class="p">[</span><span class="s2">&quot;max&quot;</span><span class="p">]]</span>
+            <span class="k">else</span><span class="p">:</span>
+                <span class="n">dims</span> <span class="o">=</span> <span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">]</span>
+
+        <span class="k">return</span> <span class="n">dims</span></div></div>
 
 
 <span class="k">def</span> <span class="nf">_find_column_source</span><span class="p">(</span><span class="n">upstream_nodes</span><span class="p">,</span> <span class="n">column_name</span><span class="p">):</span>
