--- a/review/pr-176/_modules/merlin/systems/dag/ops/tensorflow.html
+++ b/review/pr-176/_modules/merlin/systems/dag/ops/tensorflow.html
@@ -100,6 +100,7 @@
 
 <span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">ColumnSelector</span>  <span class="c1"># noqa</span>
 <span class="kn">from</span> <span class="nn">merlin.schema</span> <span class="kn">import</span> <span class="n">ColumnSchema</span><span class="p">,</span> <span class="n">Schema</span>  <span class="c1"># noqa</span>
+<span class="kn">from</span> <span class="nn">merlin.systems.dag.ops</span> <span class="kn">import</span> <span class="n">compute_dims</span>  <span class="c1"># noqa</span>
 <span class="kn">from</span> <span class="nn">merlin.systems.dag.ops.operator</span> <span class="kn">import</span> <span class="n">InferenceOperator</span><span class="p">,</span> <span class="n">add_model_param</span>  <span class="c1"># noqa</span>
 
 
@@ -198,12 +199,18 @@
 
         <span class="k">for</span> <span class="n">_</span><span class="p">,</span> <span class="n">col_schema</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">input_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
             <span class="n">add_model_param</span><span class="p">(</span>
-                <span class="n">config</span><span class="o">.</span><span class="n">input</span><span class="p">,</span> <span class="n">model_config</span><span class="o">.</span><span class="n">ModelInput</span><span class="p">,</span> <span class="n">col_schema</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">compute_dims</span><span class="p">(</span><span class="n">col_schema</span><span class="p">)</span>
+                <span class="n">config</span><span class="o">.</span><span class="n">input</span><span class="p">,</span>
+                <span class="n">model_config</span><span class="o">.</span><span class="n">ModelInput</span><span class="p">,</span>
+                <span class="n">col_schema</span><span class="p">,</span>
+                <span class="n">compute_dims</span><span class="p">(</span><span class="n">col_schema</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">scalar_shape</span><span class="p">),</span>
             <span class="p">)</span>
 
         <span class="k">for</span> <span class="n">_</span><span class="p">,</span> <span class="n">col_schema</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">output_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
             <span class="n">add_model_param</span><span class="p">(</span>
-                <span class="n">config</span><span class="o">.</span><span class="n">output</span><span class="p">,</span> <span class="n">model_config</span><span class="o">.</span><span class="n">ModelOutput</span><span class="p">,</span> <span class="n">col_schema</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">compute_dims</span><span class="p">(</span><span class="n">col_schema</span><span class="p">)</span>
+                <span class="n">config</span><span class="o">.</span><span class="n">output</span><span class="p">,</span>
+                <span class="n">model_config</span><span class="o">.</span><span class="n">ModelOutput</span><span class="p">,</span>
+                <span class="n">col_schema</span><span class="p">,</span>
+                <span class="n">compute_dims</span><span class="p">(</span><span class="n">col_schema</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">scalar_shape</span><span class="p">),</span>
             <span class="p">)</span>
 
         <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">output_path</span><span class="p">,</span> <span class="s2">&quot;config.pbtxt&quot;</span><span class="p">),</span> <span class="s2">&quot;w&quot;</span><span class="p">,</span> <span class="n">encoding</span><span class="o">=</span><span class="s2">&quot;utf-8&quot;</span><span class="p">)</span> <span class="k">as</span> <span class="n">o</span><span class="p">:</span>
