--- a/main/_modules/merlin/systems/dag/ensemble.html
+++ b/main/_modules/merlin/systems/dag/ensemble.html
@@ -97,7 +97,8 @@
 <span class="kn">from</span> <span class="nn">google.protobuf</span> <span class="kn">import</span> <span class="n">text_format</span>  <span class="c1"># noqa</span>
 
 <span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">Graph</span>  <span class="c1"># noqa</span>
-<span class="kn">from</span> <span class="nn">merlin.systems.triton.export</span> <span class="kn">import</span> <span class="n">_convert_dtype</span>  <span class="c1"># noqa</span>
+<span class="kn">from</span> <span class="nn">merlin.systems.dag.ops</span> <span class="kn">import</span> <span class="n">compute_dims</span>  <span class="c1"># noqa</span>
+<span class="kn">from</span> <span class="nn">merlin.systems.dag.ops.operator</span> <span class="kn">import</span> <span class="n">add_model_param</span>  <span class="c1"># noqa</span>
 
 
 <div class="viewcode-block" id="Ensemble"><a class="viewcode-back" href="../../../../generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble">[docs]</a><span class="k">class</span> <span class="nc">Ensemble</span><span class="p">:</span>
@@ -145,18 +146,20 @@
             <span class="c1"># max_batch_size=configs[0].max_batch_size</span>
         <span class="p">)</span>
 
-        <span class="k">for</span> <span class="n">col_name</span><span class="p">,</span> <span class="n">col_schema</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">graph</span><span class="o">.</span><span class="n">input_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-            <span class="n">ensemble_config</span><span class="o">.</span><span class="n">input</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
-                <span class="n">model_config</span><span class="o">.</span><span class="n">ModelInput</span><span class="p">(</span>
-                    <span class="n">name</span><span class="o">=</span><span class="n">col_name</span><span class="p">,</span> <span class="n">data_type</span><span class="o">=</span><span class="n">_convert_dtype</span><span class="p">(</span><span class="n">col_schema</span><span class="o">.</span><span class="n">dtype</span><span class="p">),</span> <span class="n">dims</span><span class="o">=</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">]</span>
-                <span class="p">)</span>
+        <span class="k">for</span> <span class="n">_</span><span class="p">,</span> <span class="n">col_schema</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">graph</span><span class="o">.</span><span class="n">input_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+            <span class="n">add_model_param</span><span class="p">(</span>
+                <span class="n">ensemble_config</span><span class="o">.</span><span class="n">input</span><span class="p">,</span>
+                <span class="n">model_config</span><span class="o">.</span><span class="n">ModelInput</span><span class="p">,</span>
+                <span class="n">col_schema</span><span class="p">,</span>
+                <span class="n">col_schema</span><span class="o">.</span><span class="n">properties</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;shape&quot;</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span> <span class="ow">or</span> <span class="n">compute_dims</span><span class="p">(</span><span class="n">col_schema</span><span class="p">),</span>
             <span class="p">)</span>
 
-        <span class="k">for</span> <span class="n">col_name</span><span class="p">,</span> <span class="n">col_schema</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">graph</span><span class="o">.</span><span class="n">output_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-            <span class="n">ensemble_config</span><span class="o">.</span><span class="n">output</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
-                <span class="n">model_config</span><span class="o">.</span><span class="n">ModelOutput</span><span class="p">(</span>
-                    <span class="n">name</span><span class="o">=</span><span class="n">col_name</span><span class="p">,</span> <span class="n">data_type</span><span class="o">=</span><span class="n">_convert_dtype</span><span class="p">(</span><span class="n">col_schema</span><span class="o">.</span><span class="n">dtype</span><span class="p">),</span> <span class="n">dims</span><span class="o">=</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">]</span>
-                <span class="p">)</span>
+        <span class="k">for</span> <span class="n">_</span><span class="p">,</span> <span class="n">col_schema</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">graph</span><span class="o">.</span><span class="n">output_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+            <span class="n">add_model_param</span><span class="p">(</span>
+                <span class="n">ensemble_config</span><span class="o">.</span><span class="n">output</span><span class="p">,</span>
+                <span class="n">model_config</span><span class="o">.</span><span class="n">ModelOutput</span><span class="p">,</span>
+                <span class="n">col_schema</span><span class="p">,</span>
+                <span class="n">col_schema</span><span class="o">.</span><span class="n">properties</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;shape&quot;</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span> <span class="ow">or</span> <span class="n">compute_dims</span><span class="p">(</span><span class="n">col_schema</span><span class="p">),</span>
             <span class="p">)</span>
 
         <span class="c1"># Build node id lookup table</span>
@@ -189,17 +192,34 @@
                     <span class="n">model_name</span><span class="o">=</span><span class="n">node_name</span><span class="p">,</span> <span class="n">model_version</span><span class="o">=-</span><span class="mi">1</span>
                 <span class="p">)</span>
 
-                <span class="k">for</span> <span class="n">input_col_name</span> <span class="ow">in</span> <span class="n">node</span><span class="o">.</span><span class="n">input_schema</span><span class="o">.</span><span class="n">column_names</span><span class="p">:</span>
+                <span class="k">for</span> <span class="n">input_col_name</span><span class="p">,</span> <span class="n">input_col_schema</span> <span class="ow">in</span> <span class="n">node</span><span class="o">.</span><span class="n">input_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
                     <span class="n">source</span> <span class="o">=</span> <span class="n">_find_column_source</span><span class="p">(</span><span class="n">node</span><span class="o">.</span><span class="n">parents_with_dependencies</span><span class="p">,</span> <span class="n">input_col_name</span><span class="p">)</span>
                     <span class="n">source_id</span> <span class="o">=</span> <span class="n">node_id_lookup</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">source</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>
                     <span class="n">in_suffix</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;_</span><span class="si">{</span><span class="n">source_id</span><span class="si">}</span><span class="s2">&quot;</span> <span class="k">if</span> <span class="n">source_id</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span> <span class="k">else</span> <span class="s2">&quot;&quot;</span>
-                    <span class="n">config_step</span><span class="o">.</span><span class="n">input_map</span><span class="p">[</span><span class="n">input_col_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">input_col_name</span> <span class="o">+</span> <span class="n">in_suffix</span>
+                    <span class="k">if</span> <span class="n">input_col_schema</span><span class="o">.</span><span class="n">is_list</span> <span class="ow">and</span> <span class="n">input_col_schema</span><span class="o">.</span><span class="n">is_ragged</span><span class="p">:</span>
+                        <span class="n">config_step</span><span class="o">.</span><span class="n">input_map</span><span class="p">[</span><span class="n">input_col_name</span> <span class="o">+</span> <span class="s2">&quot;__values&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span>
+                            <span class="n">input_col_name</span> <span class="o">+</span> <span class="s2">&quot;__values&quot;</span> <span class="o">+</span> <span class="n">in_suffix</span>
+                        <span class="p">)</span>
+                        <span class="n">config_step</span><span class="o">.</span><span class="n">input_map</span><span class="p">[</span><span class="n">input_col_name</span> <span class="o">+</span> <span class="s2">&quot;__nnzs&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span>
+                            <span class="n">input_col_name</span> <span class="o">+</span> <span class="s2">&quot;__nnzs&quot;</span> <span class="o">+</span> <span class="n">in_suffix</span>
+                        <span class="p">)</span>
+                    <span class="k">else</span><span class="p">:</span>
+                        <span class="n">config_step</span><span class="o">.</span><span class="n">input_map</span><span class="p">[</span><span class="n">input_col_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">input_col_name</span> <span class="o">+</span> <span class="n">in_suffix</span>
 
-                <span class="k">for</span> <span class="n">output_col_name</span> <span class="ow">in</span> <span class="n">node</span><span class="o">.</span><span class="n">output_schema</span><span class="o">.</span><span class="n">column_names</span><span class="p">:</span>
+                <span class="k">for</span> <span class="n">output_col_name</span><span class="p">,</span> <span class="n">output_col_schema</span> <span class="ow">in</span> <span class="n">node</span><span class="o">.</span><span class="n">output_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
                     <span class="n">out_suffix</span> <span class="o">=</span> <span class="p">(</span>
                         <span class="sa">f</span><span class="s2">&quot;_</span><span class="si">{</span><span class="n">node_id</span><span class="si">}</span><span class="s2">&quot;</span> <span class="k">if</span> <span class="n">node_id</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span> <span class="ow">and</span> <span class="n">node_id</span> <span class="o">&lt;</span> <span class="n">node_idx</span> <span class="o">-</span> <span class="mi">1</span> <span class="k">else</span> <span class="s2">&quot;&quot;</span>
                     <span class="p">)</span>
-                    <span class="n">config_step</span><span class="o">.</span><span class="n">output_map</span><span class="p">[</span><span class="n">output_col_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">output_col_name</span> <span class="o">+</span> <span class="n">out_suffix</span>
+
+                    <span class="k">if</span> <span class="n">output_col_schema</span><span class="o">.</span><span class="n">is_list</span> <span class="ow">and</span> <span class="n">output_col_schema</span><span class="o">.</span><span class="n">is_ragged</span><span class="p">:</span>
+                        <span class="n">config_step</span><span class="o">.</span><span class="n">output_map</span><span class="p">[</span><span class="n">output_col_name</span> <span class="o">+</span> <span class="s2">&quot;__values&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span>
+                            <span class="n">output_col_name</span> <span class="o">+</span> <span class="s2">&quot;__values&quot;</span> <span class="o">+</span> <span class="n">out_suffix</span>
+                        <span class="p">)</span>
+                        <span class="n">config_step</span><span class="o">.</span><span class="n">output_map</span><span class="p">[</span><span class="n">output_col_name</span> <span class="o">+</span> <span class="s2">&quot;__nnzs&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span>
+                            <span class="n">output_col_name</span> <span class="o">+</span> <span class="s2">&quot;__nnzs&quot;</span> <span class="o">+</span> <span class="n">out_suffix</span>
+                        <span class="p">)</span>
+                    <span class="k">else</span><span class="p">:</span>
+                        <span class="n">config_step</span><span class="o">.</span><span class="n">output_map</span><span class="p">[</span><span class="n">output_col_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">output_col_name</span> <span class="o">+</span> <span class="n">out_suffix</span>
 
                 <span class="n">ensemble_config</span><span class="o">.</span><span class="n">ensemble_scheduling</span><span class="o">.</span><span class="n">step</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">config_step</span><span class="p">)</span>
                 <span class="n">node_configs</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">node_config</span><span class="p">)</span>
