Pushing changes to GitHub Pages.

--- a/review/pr-218/_modules/merlin/systems/dag/ensemble.html
+++ b/review/pr-218/_modules/merlin/systems/dag/ensemble.html
@@ -96,7 +96,6 @@
 
 <span class="kn">from</span> <span class="nn">merlin.core.protocols</span> <span class="kn">import</span> <span class="n">Transformable</span>
 <span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">Graph</span>
-<span class="kn">from</span> <span class="nn">merlin.dag.executors</span> <span class="kn">import</span> <span class="n">LocalExecutor</span>
 <span class="kn">from</span> <span class="nn">merlin.systems.dag.runtimes.triton</span> <span class="kn">import</span> <span class="n">TritonEnsembleRuntime</span>
 
 
@@ -130,7 +129,7 @@
     <span class="k">def</span> <span class="nf">output_schema</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">graph</span><span class="o">.</span><span class="n">output_schema</span>
 
-<div class="viewcode-block" id="Ensemble.transform"><a class="viewcode-back" href="../../../../generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble.transform">[docs]</a>    <span class="k">def</span> <span class="nf">transform</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">transformable</span><span class="p">:</span> <span class="n">Transformable</span><span class="p">,</span> <span class="n">executor</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+<div class="viewcode-block" id="Ensemble.transform"><a class="viewcode-back" href="../../../../generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble.transform">[docs]</a>    <span class="k">def</span> <span class="nf">transform</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">transformable</span><span class="p">:</span> <span class="n">Transformable</span><span class="p">,</span> <span class="n">runtime</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Delegate transformation of input data to the executor with</span>
 <span class="sd">        the necessary ensemble graph. This will traverse each node of</span>
 <span class="sd">        the graph and mutate the input according to the operator in each</span>
@@ -139,17 +138,17 @@
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
 <span class="sd">        transformable : Transformable</span>
-<span class="sd">            Input data to the graph (Dataframe or Dictarray).</span>
-<span class="sd">        executor : Executor, optional</span>
-<span class="sd">            The graph executor to use to transform the inputs, by default None</span>
+<span class="sd">            Input data to the graph (DataFrame or DictArray).</span>
+<span class="sd">        runtime : Runtime, optional</span>
+<span class="sd">            The graph runtime to use to transform the inputs, by default None</span>
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
 <span class="sd">        Transformable</span>
 <span class="sd">            transformed data</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">executor</span> <span class="o">=</span> <span class="n">executor</span> <span class="ow">or</span> <span class="n">LocalExecutor</span><span class="p">()</span>
-        <span class="k">return</span> <span class="n">executor</span><span class="o">.</span><span class="n">transform</span><span class="p">(</span><span class="n">transformable</span><span class="p">,</span> <span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">graph</span><span class="o">.</span><span class="n">output_node</span><span class="p">])</span></div>
+        <span class="n">runtime</span> <span class="o">=</span> <span class="n">runtime</span> <span class="ow">or</span> <span class="n">TritonEnsembleRuntime</span><span class="p">()</span>
+        <span class="k">return</span> <span class="n">runtime</span><span class="o">.</span><span class="n">transform</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">graph</span><span class="p">,</span> <span class="n">transformable</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="Ensemble.save"><a class="viewcode-back" href="../../../../generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble.save">[docs]</a>    <span class="k">def</span> <span class="nf">save</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">path</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Save this ensemble to disk</span>
