Pushing changes to GitHub Pages.

--- a/main/genindex.html
+++ b/main/genindex.html
@@ -264,9 +264,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/merlin.systems.dag.ops.tensorflow.PredictTensorflow.html#merlin.systems.dag.ops.tensorflow.PredictTensorflow.tf_model_name">tf_model_name() (merlin.systems.dag.ops.tensorflow.PredictTensorflow property)</a>
 </li>
-      <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.transform">transform() (merlin.systems.dag.ops.session_filter.FilterCandidates method)</a>
+      <li><a href="generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble.transform">transform() (merlin.systems.dag.Ensemble method)</a>
 
       <ul>
+        <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.transform">(merlin.systems.dag.ops.session_filter.FilterCandidates method)</a>
+</li>
         <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.transform">(merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling method)</a>
 </li>
         <li><a href="generated/merlin.systems.dag.ops.tensorflow.PredictTensorflow.html#merlin.systems.dag.ops.tensorflow.PredictTensorflow.transform">(merlin.systems.dag.ops.tensorflow.PredictTensorflow method)</a>
